--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="font_normal">#262626</color>
     <color name="font_red">#F33917</color>
     <color name="font_green">#03C160</color>
+    <color name="font_6D">#6D7686</color>
 
 </resources>
