--- a/app/src/main/res/layout/item_withdraw.xml
+++ b/app/src/main/res/layout/item_withdraw.xml
@@ -66,7 +66,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="@{statusList[withdraw.status]}"
-            android:textColor="#6D7686"
+            android:textColor="@{withdraw.status==0 ? @color/font_green : @color/font_6D}"
             android:textSize="11sp"
             tools:text="0.12345678" />
 
