--- a/app/src/main/res/layout/item_withdraw.xml
+++ b/app/src/main/res/layout/item_withdraw.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@{String.valueOf(withdraw.id)}"
+            android:text="@{String.valueOf(withdraw.sn)}"
             android:textColor="#6D7686"
             android:textSize="11sp"
             tools:text="2021.03.29" />
